kubernetes/deployment-back.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          imagePullPolicy: Never
          image: tycho-backend:latest
          ports:
          - containerPort: 5000
      # volumes:
      #   - name: secret-volume
      #     secret:
      #       secretName: db-link
