kubernetes/deployment-front.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          imagePullPolicy: Never
          image: tycho-frontend:latest
          ports:
          - containerPort: 80
