kubernetes/service-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-back
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app: backend
