kubernetes/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-front
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: frontend
